--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "an-cli",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": ["cli","console","anime","watch","mpv","español"],
+  "author": "RogelioLB",
   "license": "ISC",
   "bin": {
     "an": "index.js"
