--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "an-cli",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -18,5 +18,9 @@
     "inquirer": "^8.2.0",
     "puppeteer": "^10.4.0",
     "yargs": "^17.2.1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/RogelioLB/an-cli"
   }
 }
